--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "ws": "^8.14.2"
+    "axios": "^1.6.2"
   },
   "engines": {
     "node": ">=14.0.0"
